fix(colors): update solarized light color for improved contrast

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -126,7 +126,7 @@
   --color-facebook: #1877f2;
   --color-twitter: #0f1419;
   --color-linkedin: #0077b5;
-  --color-solarized-light: #fdf6e3;
+  --color-solarized-light: #fdfaf6;
   --color-github-dark-dimmed: #22272e;
   --color-code-block: #36313d;
 }
