--- a/css/typography.css
+++ b/css/typography.css
@@ -100,7 +100,7 @@
   }
 
   [data-highlighted-line] {
-    @apply border-l-4 border-l-gray-300 bg-orange-100 pl-3;
+    @apply border-l-4 border-l-gray-300 bg-orange-100/75 pl-3;
   }
 
   [data-highlighted-chars] {
